--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   color: #09d3ac;
 }
 .star-ratings-sprite {
-  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
+  background: url("./images/star.png") repeat-x;
   font-size: 0;
   height: 21px;
   line-height: 0;
@@ -30,7 +30,7 @@
   width: 110px;
 }
 .star-ratings-sprite-rating {
-  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
+  background: url("./images/star.png") repeat-x;
   background-position: 0 100%;
   float: left;
   height: 21px;
